--- a/environments/game_environments/gymnasium/configs/blackjack_default.yaml
+++ b/environments/game_environments/gymnasium/configs/blackjack_default.yaml
@@ -31,7 +31,7 @@ blackjack:
 
 # Server configuration
 server_configs:
-  - model_name: "${OPENAI_MODEL:gpt-4.1-nano}"
-    base_url: "${OPENAI_API_BASE}"
-    api_key: "${OPENAI_API_KEY}"
-    num_requests_for_eval: 256 
+  - model_name: "NousResearch/DeepHermes-3-Llama-3-8B-Preview"
+    base_url: "http://localhost:9004/v1"
+    api_key: "x"
+    num_requests_for_eval: 256
