--- a/environments/game_environments/gymnasium/configs/blackjack_local.yaml
+++ b/environments/game_environments/gymnasium/configs/blackjack_local.yaml
@@ -3,7 +3,7 @@
 
 # Base environment parameters (can override base.yaml)
 tokenizer_name: "NousResearch/DeepHermes-3-Llama-3-8B-Preview"
-group_size: 1
+group_size: 4
 use_wandb: false
 max_num_workers: 1
 rollout_server_url: "http://localhost:8000"
@@ -31,7 +31,6 @@ blackjack:
 
 # Server configuration
 server_configs:
-  - model_name: "${OPENAI_MODEL:gpt-4.1-nano}"
-    base_url: "${OPENAI_API_BASE}"
-    api_key: "${OPENAI_API_KEY}"
+  - model_name: "gpt-4.1-nano"
+    base_url: "https://api.openai.com/v1"
     num_requests_for_eval: 256 
