--- a/environments/dataset_environment/configs/dataset_local.yaml
+++ b/environments/dataset_environment/configs/dataset_local.yaml
@@ -29,12 +29,16 @@ temperature: 0.7
 top_p: 0.9
 
 reward_functions:
-  - "accuracy"
-  - "format"
-accuracy_reward_weight: 1.0 # Assuming these were meant to be top-level or consumed by reward fns
-format_reward_weight: 0.2  # Assuming these were meant to be top-level or consumed by reward fns
-
-
+  - type: "accuracy"
+    weight: 1.0
+    params:
+      split_on_think_tag: true
+  - type: "format"
+    weight: 0.2
+    params:
+      preferred_tags: ["think"]
+      require_all_tags: true
+      
 server_configs:
   - model_name: "gpt-4.1-nano"
     base_url: "https://api.openai.com/v1"
