--- a/environments/dataset_environment/configs/dataset_local.yaml
+++ b/environments/dataset_environment/configs/dataset_local.yaml
@@ -21,9 +21,7 @@ prefill: "<think>\n"
 shuffle_dataset: true
 max_generations_per_prompt: 1
 
-max_tokens: 4096 # This was also under dataset, assuming it's the generation max_tokens
-length_warmup_steps: 0
-min_tokens: 0
+max_tokens: 4096
 
 temperature: 0.7
 top_p: 0.9
