--- a/environments/dataset_environment/configs/dataset_default.yaml
+++ b/environments/dataset_environment/configs/dataset_default.yaml
@@ -39,7 +39,6 @@ reward_functions:
       require_all_tags: true
 
 server_configs:
-  - model_name: "NousResearch/DeepHermes-3-Llama-3-8B-Preview"
-    base_url: "http://localhost:9004/v1"
-    api_key: "x"
+  - model_name: "gpt-4.1-nano"
+    base_url: "https://api.openai.com/v1"
     num_requests_for_eval: 256
