--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,29 @@
-requests>=2.31.0
-python-dotenv>=1.0.0
 fastapi>=0.100.0
 uvicorn[standard]>=0.20.0
-pybullet==3.2.5
-websockets
-numpy
-wandb
-anthropic
+gunicorn>=20.1.0
+python-dotenv>=1.0.0 # For local development, not used in Docker image for secrets
+
+# Dependencies for your research pipeline classes
+requests>=2.31.0
+# anthropic>=0.21.3 # Removing as we switch to Gemini
+google-cloud-bigquery>=3.15.0
+google-cloud-storage>=2.10.0 # If paper_generator saves to/reads from GCS
+google-generativeai>=0.5.0 # For Gemini
+
+# Dependency for Cloud Scheduler setup script
+google-cloud-scheduler>=2.0.0
+
+# Add any dependencies specifically required by run_single_padres_test.py 
+# or other listed scripts if not covered above. For example:
+# pybullet
+# numpy
+# websockets
+
+# Add other specific dependencies from your project if any
+# For example:
+# pybullet==3.2.5
+# numpy
+# websockets
 
 # Add any other direct pip dependencies here
 # For example, if your llm_services.py used other specific libraries 
