--- a/requirements.txt
+++ b/requirements.txt
@@ -25,5 +25,40 @@ google-cloud-scheduler>=2.0.0
 # numpy
 # websockets
 
+# Enhanced AMIEN Dependencies for AI Scientist and FunSearch Integration
+gitpython>=3.1.40
+psutil>=5.9.6
+tqdm>=4.66.1
+rich>=13.7.0
+typer>=0.9.0
+pyyaml>=6.0.1
+jsonschema>=4.20.0
+networkx>=3.2.1
+sympy>=1.12
+torch>=2.1.1
+transformers>=4.36.0
+datasets>=2.15.0
+accelerate>=0.25.0
+wandb>=0.16.1
+openai>=1.3.7
+anthropic>=0.7.7
+numpy>=1.24.3
+pandas>=2.0.3
+matplotlib>=3.7.2
+seaborn>=0.12.2
+plotly>=5.17.0
+scikit-learn>=1.3.0
+scipy>=1.11.4
+Pillow>=10.1.0
+python-dateutil>=2.8.2
+pytz>=2023.3
+jinja2>=3.1.2
+markdown>=3.5.1
+beautifulsoup4>=4.12.2
+lxml>=4.9.3
+aiofiles>=23.2.1
+httpx>=0.25.2
+google-cloud-secretmanager>=2.16.4
+
 # Add any other direct pip dependencies here
 # For example, if your llm_services.py used other specific libraries 
