Adding env setup

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "environments/intern_bootcamp/internbootcamp_lib"]
 	path = environments/intern_bootcamp/internbootcamp_lib
 	url = https://github.com/InternLM/InternBootcamp.git
+[submodule "environments/longform_story_generation/ReasoningNCP"]
+	path = environments/longform_story_generation/ReasoningNCP
+	url = https://github.com/Alex-Gurung/ReasoningNCP.git
