--- a/environments/bleuberi/requirements.txt
+++ b/environments/bleuberi/requirements.txt
@@ -8,5 +8,6 @@ tqdm>=4.67.1
 numpy>=1.26.4
 model2vec>=0.4.1
 absl-py>=0.9.0
+python-dotenv>=1.0.0
 # Optional dependencies for reference generation
 # vllm>=0.8.3
