--- a/environments/community/ethereum_virtual_machine/configs/token_transfers.yaml
+++ b/environments/community/ethereum_virtual_machine/configs/token_transfers.yaml
@@ -48,27 +48,27 @@ whitelisted_tokens:
   USDC:
     address: "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
     decimals: 6
-  #USDT:
-  #  address: "0xdAC17F958D2ee523a2206206994597C13D831ec7"
-  #  decimals: 6
-  #WBTC:
-  #  address: "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599"
-  #  decimals: 8
-  #DAI:
-  #  address: "0x6B175474E89094C44Da98b954EedeAC495271d0F"
-  #  decimals: 18
-  #LINK:
-  #  address: "0x514910771AF9Ca656af840dff83E8264EcF986CA"
-  #  decimals: 18
-  #CRV:
-  #  address: "0xD533a949740bb3306d119CC777fa900bA034cd52"
-  #  decimals: 18
-  #UNI:
-  #  address: "0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984"
-  #  decimals: 18
-  #LDO:
-  #  address: "0x5A98FcBEA516Cf06857215779Fd812CA3beF1B32"
-  #  decimals: 18
+  USDT:
+    address: "0xdAC17F958D2ee523a2206206994597C13D831ec7"
+    decimals: 6
+  WBTC:
+    address: "0x2260FAC5E5542a773Aa44fBCfeDf7C193bc2C599"
+    decimals: 8
+  DAI:
+    address: "0x6B175474E89094C44Da98b954EedeAC495271d0F"
+    decimals: 18
+  LINK:
+    address: "0x514910771AF9Ca656af840dff83E8264EcF986CA"
+    decimals: 18
+  CRV:
+    address: "0xD533a949740bb3306d119CC777fa900bA034cd52"
+    decimals: 18
+  UNI:
+    address: "0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984"
+    decimals: 18
+  LDO:
+    address: "0x5A98FcBEA516Cf06857215779Fd812CA3beF1B32"
+    decimals: 18
 
 # ============================================================================
 # DEFI PROTOCOL ADDRESSES
@@ -92,3 +92,18 @@ swaps:
 
   # Function selector for Uniswap V3 exactInputSingle
   uniswap_exact_input_single_selector: "0x414bf389"
+
+# ============================================================================
+# EVM ENVIRONMENT CONFIGURATION
+# ============================================================================
+# These values override the defaults in evm_config.py
+
+# Question generation LLM settings
+question_generation_model: "gpt-4o-mini"
+question_generation_temperature: 0.6
+question_generation_max_tokens: 256
+question_generation_n: 3
+
+# Question selection strategy
+weak_performance_threshold: 0.9
+weak_area_focus_ratio: 0.8
