fix: Add missing submodule entry for pytest-multiple-versions-actions to fix CI

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "environments/reasoning_gym_environment/reasoning-gym"]
 	path = environments/reasoning_gym_environment/reasoning-gym
 	url = https://github.com/open-thought/reasoning-gym
+[submodule "pytest-multiple-versions-actions"]
+	path = pytest-multiple-versions-actions
+	url = https://github.com/pytest-dev/pytest-multiple-versions-actions.git
