--- a/environments/Refusal_bench/configs/refusal_benchmark.yaml
+++ b/environments/Refusal_bench/configs/refusal_benchmark.yaml
@@ -54,7 +54,7 @@ min_batch_allocation: 0.1
 # Path to your JSONL test dataset
 # Each line should contain: {"user": "question", "assistant": "response", "original_label": 1}
 # Can be relative path from script location or absolute path
-data_file: "processed_test_label1.jsonl"
+data_file: "test_set.jsonl"
 
 # Maximum number of samples to evaluate (use smaller values for testing)
 # Set to -1 to evaluate all available samples
