Add Word Hunt environment for training models on 4x4 letter grids
- Trie-based solver, official scoring, normalized rewards
- Configurable token limit and detailed README with dictionary download link
- Removes large Dictionary.txt from tracking and adds ignore rules
- All tests pass and pre-commit hooks are clean

--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,11 @@ uv.lock
 
 .DS_Store
 .aider*
+environments/community/word_hunt/Dictionary.txt
+
+# Word Hunt artefacts
+environments/community/word_hunt/Dictionary.txt
+environments/community/word_hunt/debug_test.py
+environments/community/word_hunt/template_with_metadata.html
+environments/community/word_hunt/word_hunt_rollouts*.html
+.DS_Store
