Add diplomacy environment with AI_Diplomacy submodule
- Add diplomacy_env_minimal.py for diplomacy game environment
- Add atropos_client_minimal.py for client interface
- Add diplomacy_local_server.py for local game server
- Add AI_Diplomacy submodule from GoodStartLabs/AI_Diplomacy
- Fix import ordering and remove unused imports

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "environments/reasoning_gym_environment/reasoning-gym"]
 	path = environments/reasoning_gym_environment/reasoning-gym
 	url = https://github.com/open-thought/reasoning-gym
+[submodule "environments/game_environments/diplomacy_environment/AI_Diplomacy"]
+	path = environments/game_environments/diplomacy_environment/AI_Diplomacy
+	url = https://github.com/GoodStartLabs/AI_Diplomacy.git
