--- a/environments/game_environments/diplomacy_environment/requirements.txt
+++ b/environments/game_environments/diplomacy_environment/requirements.txt
@@ -4,8 +4,13 @@
 httpx>=0.24.0
 pydantic>=2.0.0
 numpy>=1.24.0
+python-dotenv>=1.0.0
 
 # AI_Diplomacy dependencies
 tornado>=6.0
 ujson>=5.0
 websockets>=10.0
+coloredlogs>=15.0.1
+anthropic>=0.54.0
+openai>=1.90.0
+aiohttp>=3.8.0
