TextArena minimal: keep only .gitignore tweak and textarena_env; revert all other changes to match main

--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,8 @@ cython_debug/
 # data
 *.json
 *.jsonl
+# Keep the TextArena registry cache in version control because it's expensive to generate
+!environments/game_environments/textarena_env/textarena_registry_cache.json
 
 # wandb
 wandb
