--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "jsonlines",
     "pydantic-cli",
     "hf_transfer",
+    "python-dotenv",
+    "textarena",
 ]
 
 [project.scripts]
