--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "markdown",
     "numpy",
     "wandb",
+    "weave",
     "gymnasium",
     "math-verify==0.7.0",
     "jinja2",
