--- a/environments/cline_env/docker/go/Dockerfile
+++ b/environments/cline_env/docker/go/Dockerfile
@@ -4,19 +4,22 @@ FROM ${BASE_IMAGE}
 
 USER root
 
-# Install Go
-RUN wget -q https://go.dev/dl/go1.22.0.linux-amd64.tar.gz \
-    && tar -C /usr/local -xzf go1.22.0.linux-amd64.tar.gz \
-    && rm go1.22.0.linux-amd64.tar.gz
+# Install Go 1.24 (latest stable)
+RUN wget -q https://go.dev/dl/go1.24.4.linux-amd64.tar.gz \
+    && tar -C /usr/local -xzf go1.24.4.linux-amd64.tar.gz \
+    && rm go1.24.4.linux-amd64.tar.gz
 
 ENV PATH="/usr/local/go/bin:/home/cline/go/bin:${PATH}"
 ENV GOPATH="/home/cline/go"
+ENV GOCACHE="/home/cline/.cache/go-build"
+
+# Create directories with proper permissions for cline user
+RUN mkdir -p /home/cline/go/{bin,src,pkg} /home/cline/.cache/go-build \
+    && chown -R cline:cline /home/cline/go /home/cline/.cache
 
 USER cline
-RUN mkdir -p /home/cline/go/{bin,src,pkg}
 
-# Install common Go tools
-RUN go install golang.org/x/tools/gopls@latest \
-    && go install github.com/go-delve/delve/cmd/dlv@latest
+# Verify Go installation
+RUN go version
 
 WORKDIR /workspace
