added verifiers in pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,9 @@ all = [
 rewardfns = [
     "torch"
 ]
+verifiers = [
+    "verifiers>=0.1.5.post0"
+]
 dev = [
     "pytest",
     "pytest-asyncio",
