--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "numpy",
     "wandb",
     "gymnasium",
-    "math-verify==0.7.0",
+    "math-verify>=0.8.0,<0.9",
     "jinja2",
     "nltk",
     "rich",
@@ -26,7 +26,7 @@ dependencies = [
     "jsonlines",
     "pydantic-cli",
     "hf_transfer",
-    "verifiers>=0.1.5.post0",
+    "verifiers>=0.1.9.post0",
 ]
 
 [project.scripts]
