--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "numpy",
     "wandb",
     "gymnasium",
-    "math-verify==0.7.0",
+    "math-verify>=0.7.0",
     "jinja2",
     "nltk",
     "rich",
@@ -38,7 +38,7 @@ atropos-dpo-gen = "atroposlib.cli.dpo:main"
 
 [project.optional-dependencies]
 all = [
-    "atroposlib[dev,examples]"
+    "atroposlib[dev,examples,verifiers]"
 ]
 rewardfns = [
     "torch"
@@ -57,6 +57,10 @@ examples = [
     "gradio",
     "atroposlib[rewardfns]",
     "langdetect"
+]
+
+verifiers = [
+    "verifiers>=0.1.9.post0",
 ]
 
 [build-system]
